force-app/main/default/objects/Account/fields/Client_Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Client_Annual_Budget__c</fullName>
    <description>Indicative annual budget. Restricted to Sales Manager and above.</description>
    <label>Annual Event Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>