force-app/main/default/objects/Account/fields/Cultural_Religious_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Religious_Considerations__c</fullName>
    <inlineHelpText>Document any cultural practices, religious observances, or traditional customs that must be respected during planning and execution.</inlineHelpText>
    <label>Cultural / Religious Considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>