force-app/main/default/objects/Account/fields/Data_Sensitivity_Flag__c.field-meta.xml
<CustomField>
    <fullName>Data_Sensitivity_Flag__c</fullName>
    <label>Data Sensitivity Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>High-Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>