force-app/main/default/objects/Account/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Human-readable display name. Returns combined names for couples on Personal Clients; falls back to Account Name for Corporate.</description>
    <formula>IF(
  RecordType.DeveloperName = &quot;Personal_Client&quot;,
  IF(
    ISBLANK(Secondary_Client_Full_Name__c),
    Name,
    Name &amp; &quot; &amp; &quot; &amp; Secondary_Client_Full_Name__c
  ),
  Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display_Name</label>
    <type>Text</type>
</CustomField>