force-app/main/default/objects/Account/fields/Home_Neighborhood_Area__c.field-meta.xml
<CustomField>
    <fullName>Home_Neighborhood_Area__c</fullName>
    <label>Home Neighborhood / Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>