force-app/main/default/objects/Account/fields/Is_Private_Client_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Private_Client_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Private_Client__c</label>
    <type>Checkbox</type>
</CustomField>