force-app/main/default/objects/Account/fields/Marker_Media_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Marker_Media_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intake marker: client explicitly requested no media coverage, no social media posts, no public acknowledgment. When TRUE on a Personal Client, auto-flags High-Profile.</description>
    <inlineHelpText>Check if the client requires complete media blackout (no press, no Instagram, no testimonials).</inlineHelpText>
    <label>Marker: Media-Sensitive</label>
    <type>Checkbox</type>
</CustomField>