force-app/main/default/objects/Account/fields/Marker_Public_Figure__c.field-meta.xml
<CustomField>
    <fullName>Marker_Public_Figure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intake marker: client is a public figure (celebrity, politician, high-net-worth individual in media). When TRUE on a Personal Client, the auto-flag flow sets Data Sensitivity Flag to High-Profile.</description>
    <inlineHelpText>Check this box if the client is a public figure who requires heightened privacy protections.</inlineHelpText>
    <label>Marker: Public Figure</label>
    <type>Checkbox</type>
</CustomField>