force-app/main/default/objects/Account/fields/Marker_VIP_Referral__c.field-meta.xml
<CustomField>
    <fullName>Marker_VIP_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Intake marker: client name via a VIP referral (e.g., referred by a board member, government official, or other high-status contact). When tRUE on a Personal Client, auto-flags High-Profile.</description>
    <inlineHelpText>Check if this client was referred by a VIP contact who expects white-glove treatment and discretion.</inlineHelpText>
    <label>Marker: VIP Referral</label>
    <type>Checkbox</type>
</CustomField>