force-app/main/default/objects/Account/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <inlineHelpText>e.g., &quot;Weekday evenings after 6 PM&quot; or &quot;Saturday mornings&quot;</inlineHelpText>
    <label>Preferred Contact Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>