force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One contact flagged as primary per account</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts as Primary</relationshipLabel>
    <relationshipName>Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>