force-app/main/default/objects/Account/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Primary Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>