force-app/main/default/objects/Account/fields/Relationship_Context__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Context__c</fullName>
    <label>Relationship Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Couple</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>