force-app/main/default/objects/Account/fields/Secondary_Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Client_Full_Name__c</fullName>
    <inlineHelpText>Enter the name of the second client (e.g., spouse or partner) if applicable</inlineHelpText>
    <label>Secondary Client Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>