force-app/main/default/objects/Account/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Secondary Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>