force-app/main/default/objects/Account/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <description>Sensitive personal requests, dietary restrictions, accessibility needs, phobias, trauma triggers, or other confidential considerations. Classified as SENSITIVE per BRD SE-005 #4.c. Must be hidden from Finance Analysts and unauthorized users.</description>
    <inlineHelpText>Capture any special accommodations, sensitivities, or confidential requests the client has shared. This information is private and should only be visible to the assigned event team.</inlineHelpText>
    <label>Special Requests / Sensitivities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>