force-app/main/default/objects/Account/recordTypes/Corporate_Client.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Client</fullName>
    <active>true</active>
    <description>B2B corporate client organizations</description>
    <label>Corporate Client</label>
</RecordType>