force-app/main/default/objects/Account/recordTypes/Private_Client.recordType-meta.xml
<RecordType>
    <fullName>Private_Client</fullName>
    <active>true</active>
    <description>Private individuals and couples engaging Sahra for personal events (weddings, engagements, celebrations). Distinct from Corporate Client records</description>
    <label>Private Client</label>
</RecordType>