force-app/main/default/objects/Account/validationRules/Private_Client_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Private_Client_Required_Fields</fullName>
    <active>true</active>
    <description>Enforces required fields on Personal Clients without making them required on Corporate Accounts.</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &quot;Private_Client&quot;,
  OR(
    ISBLANK(Name),
    ISBLANK(Primary_Email__c),
    ISPICKVAL(Relationship_Context__c, &quot;&quot;),
    ISPICKVAL(Preferred_Contact_Method__c, &quot;&quot;),
    ISPICKVAL(Data_Sensitivity_Flag__c, &quot;&quot;)
  )
)</errorConditionFormula>
    <errorMessage>A Private Client requires: Primary Client Full Name, Primary Email, Relationship Context, Preferred Contact Method, and Data Sensitivity Flag. Please complete all required fields before saving.</errorMessage>
</ValidationRule>